bug on templates are fixed, now handlebar is working fine

--- a/pagesrc/index.hbs
+++ b/pagesrc/index.hbs
@@ -10,8 +10,8 @@ nav: home
 			<span class="mod-heading-ja">東京Node学園祭について</span>
 		</h1>
 	</div>
-	<p>スマートフォンの増加により現実になりつつあるC10K問題や、WebSocket により実現されつつあるリアルタイムWeb。これらへのソリューションとして世界中から注目されているのが、サーバサイドJavaScriptプラットフォームのNode.jsです。</p>
-	<p>このたびNode.js日本ユーザグループは、npmの作者であり、かつNode.jsの新たなゲートキーパーであるIsaac Schlueter氏、NodeConfの主催者である Mikeal Rogers氏、 NodeJitsuのCharlie Robbins氏、最も多くのnpmモジュールを提供する開発者であるJames Halliday氏を招聘し、2回目の「東京Node 学園祭」を開催します。</p>
+	<p>WebSocketの普及により実現されつつあるリアルタイムWebとそれに伴って現実となりつつあるC10K問題。これらへのソリューションとして世界中から注目されているのが、サーバサイドJavaScriptプラットフォームのNode.jsです。</p>
+	<p>このたびNode.js日本ユーザグループは、第3回目となるNode.jsのカンファレンス「東京Node学園祭 2013」を開催いたします。今回は、日本国内のエンジニアに多くの発表機会を提供することを狙いとしています。参加者がただの聴衆にならず、真の"参加"者となれるカンファレンスを目指します。</p>
 </section>
 
 
