--- a/pagesrc/sponsors.hbs
+++ b/pagesrc/sponsors.hbs
@@ -34,6 +34,7 @@ nav: sponsors
 	</div>
 
 	{{#each sponsor.supporters}}
+	<section class="mod-sponsor">
 		<a href="{{ url }}">
 			<div class="mod-sponsor-image">
 				<img src="{{ imageA }}" width="180" height="180" alt="">
@@ -41,6 +42,7 @@ nav: sponsors
 			<h1>{{ name }}</h1>
 			{{#markdown}}{{ text }}{{/markdown}}
 		</a>
+	</section>
 	{{/each}}
 
 </section>
