dot effect is woking on webpages

--- a/src/partials/second.hbs
+++ b/src/partials/second.hbs
@@ -94,10 +94,14 @@
 	</div>
 </footer>
 
+<div id="dotEffect"></div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="http://pxgrid.net:8000/socket.io/socket.io.js"></script>
 <script src="/2013/assets/js/vendor/davis.js"></script>
 <script src="/2013/assets/js/vendor/jquery.lazyjaxdavis.min.js"></script>
-<script src="/2013/assets/js/src/js.js"></script>
+<script src="/2013/assets/js/src/dotEffect.js"></script>
+<script src="/2013/assets/js/src/util.js"></script>
 
 </body>
 </html>
