マップのリンク追加

--- a/src/tmpls/access.hbs
+++ b/src/tmpls/access.hbs
@@ -12,8 +12,8 @@ nav: access
 	</div>
 
 	<div class="mod-gmap">
-		<iframe width="620" height="330" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=ja&amp;geocode=&amp;q=%E6%B3%95%E6%94%BF%E5%A4%A7%E5%AD%A6+%E5%B8%82%E3%83%B6%E8%B0%B7%E3%82%AD%E3%83%A3%E3%83%B3%E3%83%91%E3%82%B9&amp;aq=&amp;sll=35.695636,139.740657&amp;sspn=0.010979,0.017574&amp;g=%E6%9D%B1%E4%BA%AC%E9%83%BD%E5%8D%83%E4%BB%A3%E7%94%B0%E5%8C%BA%E5%AF%8C%E5%A3%AB%E8%A6%8B2-17-1&amp;ie=UTF8&amp;t=m&amp;ll=35.701952,139.742575&amp;spn=0.012023,0.02399&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
-		<p><a href="#">大きな地図で見る</a></p>
+		<iframe width="620" height="330" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.jp/maps?q=%5B%E6%9D%B1%E4%BA%AC%E9%83%BD%E6%96%B0%E5%AE%BF%E5%8C%BA%E5%8C%97%E6%96%B0%E5%AE%BF2-21-1%5D+(%E3%83%8B%E3%83%95%E3%83%86%E3%82%A3%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE%EF%BC%88%E6%96%B0%E5%AE%BF%E3%83%95%E3%83%AD%E3%83%B3%E3%83%88%E3%82%BF%E3%83%AF%E3%83%BC%EF%BC%89)&z=15&iwloc=A&output=embed"></iframe>
+		<p><a href="https://maps.google.co.jp/maps/ms?hl=ja&gl=jp&ie=UTF8&oe=UTF8&msa=0&msid=215474934037898151249.0004ad58e085dc6b4c4e9&t=m&z=17&vpsrc=1&brcurrent=3,0x6018f2d54c7438f5:0xcef1f602e10803f9,1" target="_blank">大きな地図で見る</a></p>
 	</div>
 
 	<p><strong>ニフティ株式会社 セミナールーム（新宿フロントタワー内）</strong><br>
