サイドバーとスポンサーページのロゴ画像を共通化
大きさが違ったので別々にしていたけど、同じ大きさでいけそうなので共通にする。

--- a/src/partials/second.hbs
+++ b/src/partials/second.hbs
@@ -52,7 +52,7 @@
 {{#each sponsor.sponsors}}
 			<div class="mod-sponsorLogo">
 				<a href="{{ url }}">
-					<img src="{{ imageB }}" width="200" height="80" alt="{{ name }}">
+					<img src="{{ image }}" alt="{{ name }}">
 				</a>
 			</div>
 {{/each}}
