--- a/src/tmpls/sponsors.hbs
+++ b/src/tmpls/sponsors.hbs
@@ -15,7 +15,7 @@ nav: sponsors
 	<section class="mod-sponsor">
 		<a href="{{ url }}">
 			<div class="mod-sponsor-image">
-				<img src="{{ imageA }}" width="180" height="180" alt="">
+				<img src="{{ image }}" alt="{{ name }}">
 			</div>
 			<h1>{{ name }}</h1>
 			{{#markdown}}{{ text }}{{/markdown}}
