--- a/src/tmpls/sponsors.hbs
+++ b/src/tmpls/sponsors.hbs
@@ -14,9 +14,9 @@ nav: sponsors
 	{{#each sponsor.sponsors}}
 	<section class="mod-sponsor">
 		<a href="{{ url }}">
-			<div class="mod-sponsor-image">
+			<div class="mod-sponsor-image"><div>
 				<img src="{{ image }}" alt="{{ name }}">
-			</div>
+			</div></div>
 			<h1>{{ name }}</h1>
 			{{#markdown}}{{ text }}{{/markdown}}
 		</a>
