トップの情報更新
動画配信は最初ないので削除。Node.js日本ユーザグループへのリンク追加

--- a/src/tmpls/index.hbs
+++ b/src/tmpls/index.hbs
@@ -46,16 +46,12 @@ nav: home
 				SSIDなどは当日お知らせします。</td>
 			</tr>
 			<tr>
-				<th><div>動画配信</div></th>
-				<td>録画したものが<a href="#">セッション情報</a>からご覧になれます。</td>
-			</tr>
-			<tr>
 				<th><div>参加費</div></th>
 				<td><a href="#">無料 / 後夜祭は3,000 円</a></td>
 			</tr>
 			<tr>
 				<th><div>主催</div></th>
-				<td><a href="#">Node.js日本ユーザグループ</a></td>
+				<td><a href="http://nodejs.jp/">Node.js日本ユーザグループ</a></td>
 			</tr>
 		</table>
 	</div>
