ダミーのリンクを更新

--- a/src/tmpls/index.hbs
+++ b/src/tmpls/index.hbs
@@ -32,7 +32,7 @@ nav: home
 			<tr>
 				<th><div>会場</div></th>
 				<td>〒169-8333 東京都新宿区北新宿2-21-1<br>
-				<a href="#">ニフティ株式会社 セミナールーム（新宿フロントタワー内）</a></td>
+				<a href="http://tech.nifty.co.jp/access/">ニフティ株式会社 セミナールーム（新宿フロントタワー内）</a></td>
 			</tr>
 			<tr>
 				<th><div>ハッシュタグ</div></th>
