ヘッダの日時修正

--- a/src/partials/first.hbs
+++ b/src/partials/first.hbs
@@ -15,7 +15,7 @@
 		<h1><a href="/2013/"><img src="/2013/assets/img/mod-pageHeader/logo.png" height="65" width="280" alt="東京Node学園祭2013"></a></h1>
 		<div class="mod-pageHeader-info">
 			<span class="mod-pageHeader-info1">Tokyo Node Fest.</span><br>
-			<span class="mod-pageHeader-info2">2013年10月26日(土) 12:00-18:00</span><br>
+			<span class="mod-pageHeader-info2">2013年10月26日(土) 13:00-18:00</span>(予定)<br>
 			後夜祭<span class="mod-pageHeader-info3">18:30-</span><br>
 			<span class="mod-pageHeader-info4">ニフティ株式会社 セミナールーム（新宿フロントタワー内）</span>
 		</div>
