取材をご希望の方へのテキスト修正

--- a/src/tmpls/index.hbs
+++ b/src/tmpls/index.hbs
@@ -108,9 +108,9 @@ nav: home
 		</h1>
 	</div>
 
-	<p>東京Node学園祭2012の取材をご希望されるプレスの皆様に取材の申し込み方法をお知らせいたします。
-東京Node学園祭2012の取材につきましては、会場のセキュリティの問題で、事前にご登録いただかないと入場することができません。<br>そこで、取材をご希望される方は、2012年11月11日（日）まで nodefest@nodejs.jp まで、取材ご担当者の氏名・所属、媒体名などをご連絡いただければ幸いです。</p>
-	<p>なお、当日は満席になることが予想されるため、立ち見での取材をお願いいたします。あらかじめご了承ください。</p>
+	<p>東京Node学園祭2013の取材をご希望されるプレスの皆様に取材の申し込み方法をお知らせいたします。 東京Node学園祭2013の取材につきましては、会場のセキュリティの問題で、事前にご登録いただかないと入場することができません。</p>
+	<p>そこで、取材をご希望される方は、2013年10月18日（金）まで nodefest@nodejs.jp まで、取材ご担当者の氏名・所属、媒体名などをご連絡いただければ幸いです。</p>
+なお、当日は満席になることが予想されるため、立ち見での取材をお願いいたします。あらかじめご了承ください。
 	<p>当日受付にて、プレスである旨を告げ、プレス用カードを受け取ったうえでご入場ください。この際、御名刺をいただきたく存じますので、ご用意をよろしくお願い致します。</p>
 
 </section>
