チケット情報修正

--- a/src/tmpls/index.hbs
+++ b/src/tmpls/index.hbs
@@ -47,7 +47,7 @@ nav: home
 			</tr>
 			<tr>
 				<th><div>参加費</div></th>
-				<td><a href="#">無料 / 後夜祭は3,000 円</a></td>
+				<td>1,000円 / 後夜祭は無料（チケットは近日中に販売開始します）</td>
 			</tr>
 			<tr>
 				<th><div>主催</div></th>
