エフェクトのスクリプト改修

--- a/src/partials/second.hbs
+++ b/src/partials/second.hbs
@@ -93,6 +93,7 @@ window.__socketServer = '{{socketServer}}';
 <script src="http://{{socketServer}}/socket.io/socket.io.js"></script>
 <script src="/2013/assets/js/vendor/davis.js"></script>
 <script src="/2013/assets/js/vendor/jquery.lazyjaxdavis.min.js"></script>
+<script src="/2013/assets/js/src/user.js"></script>
 <script src="/2013/assets/js/src/dotEffect.js"></script>
 <script src="/2013/assets/js/src/util.js"></script>
 
