--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,7 +33,7 @@ html{
 	font-size:$basefontSize * 1px;
 	line-height: 1.5;
 	height: 100%;
-	background: url("../img/misc/bg_01.png") repeat-y 50% 0;
+	background: url("../img/misc/bg_01.png") 50% 0;
 }
 
 body{
