--- a/src/tmpls/index.hbs
+++ b/src/tmpls/index.hbs
@@ -27,7 +27,7 @@ nav: home
 		<table>
 			<tr>
 				<th><div>日時</div></th>
-				<td>2013年10月26日(日) 12:00 開場 / 13:00 〜 18:00 / 後夜祭 18:30 〜</td>
+				<td>2013年10月26日(土) 12:00 開場 / 13:00 〜 18:00 / 後夜祭 18:30 〜</td>
 			</tr>
 			<tr>
 				<th><div>会場</div></th>
