Update news and index

--- a/src/tmpls/index.hbs
+++ b/src/tmpls/index.hbs
@@ -47,7 +47,7 @@ nav: home
 			</tr>
 			<tr>
 				<th><div>参加費</div></th>
-				<td>1,000円 / 後夜祭は無料（チケットは近日中に販売開始します）</td>
+				<td>1,000円 / 後夜祭は無料（チケットは<a href="http://connpass.com/event/3595/">こちら</a>から購入できます）</td>
 			</tr>
 			<tr>
 				<th><div>主催</div></th>
