--- a/src/tmpls/index.hbs
+++ b/src/tmpls/index.hbs
@@ -5,6 +5,39 @@ nav: home
 
 <section class="mod-section">
 	<div class="mod-heading">
+		<h1 style="color: red;">
+			<span class="mod-heading-en">Typhoon</span>
+			<span class="mod-heading-ja">台風による開催可否について</span>
+		</h1>
+	</div>
+	<p>東京Node学園祭開催日である10/26(土)に大型の強い台風が上陸する可能性があります。</p>
+	<p>会場は室内ですが、交通の乱れにより参加・帰宅が困難になる恐れや安全面などを考慮して、当日の開催の可否は以下のポリシーに従って、東京Node学園祭を中止する可能性があることをお伝えいたします。</p>
+	<ul>
+	  <li>1. 前日10月25日の20時の予報で、当日10時に会場が暴風警戒域にある場合中止とします。</li>
+	  <li>2. 1.で中止にならなかった場合でも、当日8時の予報で、当日10時もしくは18時に会場が暴風警戒域にある場合中止とします。</li>
+	  <li>3. その他、主催者が中止すべきと判断した場合中止とします。</li>
+	</ul>
+	<p>開催の可否は、前日20:00、当日8:00 に公式ページを更新いたしますので、そちらをご確認下さい。</p>
+	<p>公式ページ: <a href="http://nodefest.jp/2013/">http://nodefest.jp/2013/</a></p>
+	<p>なお、中止した場合の延期は予定しておりません。</p>
+	<p>参加費については、原則返金として対応させて頂きます。(返金については別途、参加者に Connpass を通じてご連絡いたします。)</p>
+	<p>予定していた発表は登壇者の方と交渉の上、可能であれば定期開催している勉強会、東京Node学園にて再演を依頼する予定です。</p>
+	<p>安全を考慮しての判断です。ご理解、ご協力のほどよろしくお願いします。</p>
+</section>
+
+<section class="mod-section">
+	<div class="mod-heading">
+		<h1>
+			<span class="mod-heading-en">Cancel after party</span>
+			<span class="mod-heading-ja">「東京Node学園祭2013 懇親会」の中止について</span>
+		</h1>
+	</div>
+	<p>台風27、28号接近の懸念から「東京Node学園祭2013」の開催についても判断が難しい状況となっており、残念ながら「東京Node学園祭2013 懇親会」につきましては中止とさせていただく事に決定致しました。</p>
+	<p>楽しみにされていた皆様には大変申し訳ございませんが、皆様の安全を最優先に考え判断させていただきました。何卒ご理解、ご了承いただく様お願い申し上げます。</p>
+</section>
+
+<section class="mod-section">
+	<div class="mod-heading">
 		<h1>
 			<span class="mod-heading-en">About</span>
 			<span class="mod-heading-ja">東京Node学園祭について</span>
@@ -47,7 +80,7 @@ nav: home
 			</tr>
 			<tr>
 				<th><div>参加費</div></th>
-				<td>1,000円 / 後夜祭は無料（チケットは<a href="http://connpass.com/event/3595/">こちら</a>から購入できます）</td>
+				<td>1,000円（チケットは<a href="http://connpass.com/event/3595/">こちら</a>から購入できます）</td>
 			</tr>
 			<tr>
 				<th><div>主催</div></th>
