--- a/src/tmpls/index.hbs
+++ b/src/tmpls/index.hbs
@@ -10,7 +10,10 @@ nav: home
 			<span class="mod-heading-ja">台風による開催可否について</span>
 		</h1>
 	</div>
-	<p><strong style="color: red;">10/24 20:00更新：現時点では明日の東京Node学園祭は開催の予定です</strong></p>
+	<p><strong style="color: red;">
+		10/25 20:00更新：現時点では明日の東京Node学園祭は開催の予定です<br>
+		最終的な判断は、明日10/26 8:00に当ページで告知します。
+	</strong></p>
 	<p>東京Node学園祭開催日である10/26(土)に大型の強い台風が上陸する可能性があります。</p>
 	<p>会場は室内ですが、交通の乱れにより参加・帰宅が困難になる恐れや安全面などを考慮して、当日の開催の可否は以下のポリシーに従って、東京Node学園祭を中止する可能性があることをお伝えいたします。</p>
 	<ul>
