--- a/src/tmpls/index.hbs
+++ b/src/tmpls/index.hbs
@@ -11,20 +11,8 @@ nav: home
 		</h1>
 	</div>
 	<p><strong style="color: red;">
-		10/26 8:30更新：現時点の予想で会場が暴風警戒域に入るという予報がないため、本日の東京Node学園祭2013を開催します。	</strong></p>
-	<p>東京Node学園祭開催日である10/26(土)に大型の強い台風が上陸する可能性があります。</p>
-	<p>会場は室内ですが、交通の乱れにより参加・帰宅が困難になる恐れや安全面などを考慮して、当日の開催の可否は以下のポリシーに従って、東京Node学園祭を中止する可能性があることをお伝えいたします。</p>
-	<ul>
-	  <li>1. 前日10月25日の20時の予報で、当日10時に会場が暴風警戒域にある場合中止とします。</li>
-	  <li>2. 1.で中止にならなかった場合でも、当日9時の予報で、当日10時もしくは18時に会場が暴風警戒域にある場合中止とします。</li>
-	  <li>3. その他、主催者が中止すべきと判断した場合中止とします。</li>
-	</ul>
-	<p>開催の可否は、前日20:00、当日9:00 に公式ページを更新いたしますので、そちらをご確認下さい。</p>
-	<p>公式ページ: <a href="http://nodefest.jp/2013/">http://nodefest.jp/2013/</a></p>
-	<p>なお、中止した場合の延期は予定しておりません。</p>
-	<p>参加費については、原則返金として対応させて頂きます。(返金については別途、参加者に Connpass を通じてご連絡いたします。)</p>
-	<p>予定していた発表は登壇者の方と交渉の上、可能であれば定期開催している勉強会、東京Node学園にて再演を依頼する予定です。</p>
-	<p>安全を考慮しての判断です。ご理解、ご協力のほどよろしくお願いします。</p>
+		10/26 8:30更新：現時点の予想で会場が暴風警戒域に入るという予報がないため、<br>
+		<span style="font-size:24px">本日の東京Node学園祭2013を開催します。	</span></strong></p>
 </section>
 
 <section class="mod-section">
