--- a/src/tmpls/index.hbs
+++ b/src/tmpls/index.hbs
@@ -41,6 +41,12 @@ nav: home
 				#nodefestB (トラック B専用)</td>
 			</tr>
 			<tr>
+				<th><div>Ustream</div></th>
+				<td>
+				<a href="http://www.ustream.tv/channel/nodefest2013a">トラックA</a><br>
+				<a href="http://www.ustream.tv/channel/nodefest2013b">トラックB</a></td>
+			</tr>
+			<tr>
 				<th><div>無線LAN</div></th>
 				<td>無料のWiFi アクセスポイントを用意します。<br>
 				SSIDなどは当日お知らせします。</td>
