--- a/_html/scss/main.scss
+++ b/_html/scss/main.scss
@@ -99,12 +99,13 @@ a img:hover {
   margin: auto;
 }
 .l-header__logo {
-  width: 210px;
   float: left;
+  width: 210px;
+  padding-top: 10px;
 }
 .l-header__utility {
-  width: 576px;
   float: right;
+  width: 576px;
 }
 .l-header__info {
   padding: 6px 0 18px;
